# langchain_exercise

./: 1.ipynb  README.md  etf_pdf.ipynb  llm_ai_service_1.ipynb  llm_ai_service_5.1_chat.py  llm_ai_service_5.2_rag_chat.ipynb  llm_ai_service_5.3_pdf.py  llm_ai_service_5.4_pdf_query.py  llm_ai_service_5.5_pdf_conversation.py  llm_ai_service_5.6_translate.py  llm_ai_service_5.7_email.py  llm_ai_service_5.8_csv.ipynb  pyproject.toml
