[tool.poetry]
name = "langchain-exercise"
version = "0.1.0"
description = ""
authors = ["Jayden <jayden@deepsearch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.13"
jupyter = "^1.0.0"
openai = "^1.14.2"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
langchain-openai = "^0.1.1"
streamlit = "^1.32.2"
huggingface-hub = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
